# tauri-leptos-quickstart

./: README.md
backend/: Cargo.toml  tauri.conf.json
backend/src/: main.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
frontend/: Cargo.toml
frontend/public/: glue.js  main.css
frontend/src/: hello.rs  main.rs
