[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.0.22"
log = "0.4.17"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
tauri-glue = { git = "https://github.com/DPM97/tauri-glue" }
bridge = { path = "../bridge" }